# zk-email-verifier

./: .gitignore  Cargo.toml  Justfile  README.md
circom-zk-email/: Dockerfile  Dockerfile.assembly  package-lock.json  package.json  tsconfig.json
circom-zk-email/circuits/: MyCircuit.circom  RecoverEmailCircuit.circom
circom-zk-email/circuits/legacy/: from_regex.circom  from_regex.json  patterns.txt  subject_regex.circom  subject_regex.json  to_regex.circom  to_regex.json
circom-zk-email/docs/: wasm-groth16-verifier.md  zk-prover-express-server.md
circom-zk-email/emls/: gmail_reset_full.eml
circom-zk-email/scripts/: generateWitness.ts  prove.ts  snarkjsUtils.ts  testProve.ts  verify.ts
circom-zk-email/server/: index.ts
docs/: relayer-zk-proof.md
zk-email-verifier-contract/: .env.example  Cargo.toml
zk-email-verifier-contract/generate-vk-contract/: Cargo.toml
zk-email-verifier-contract/generate-vk-contract/src/: main.rs
zk-email-verifier-contract/scripts/: deploy-dev.sh  deploy.sh  upgrade-dev.sh  upgrade.sh
zk-email-verifier-contract/src/: lib.rs  vk.rs
zk-email-verifier-contract/tests/: contract_verify_proof.rs  deploy_and_verify_proof.rs  e2e_test.rs
