[package]
name = "zk-email-verifier-contract"
version = "0.1.0"
edition = "2021"
description = "ZK email verifier contract"
repository = "https://github.com/web3-authn/zk-email-verifier"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.18.1"
ark-ff = { version = "0.5", default-features = false, features = ["std"] }
ark-ec = { version = "0.5", default-features = false, features = ["std"] }
ark-serialize = { version = "0.5", default-features = false, features = ["std"] }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.5", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }

[dev-dependencies]
near-sdk = { version = "5.18.1", default-features = false, features = ["unit-testing"] }
near-workspaces = "0.21.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
