[package]
name = "vk-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.5", default-features = false, features = ["std"] }
ark-ec = { version = "0.5", default-features = false, features = ["std"] }
ark-serialize = { version = "0.5", default-features = false, features = ["std"] }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
ark-groth16 = { version = "0.5", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
